Fifteenth major audit/cleanup pass — added region-tile source rendering fixing 200MP pixel grid and max-zoom blur; fixed 245 scan findings across five tiers; reflowed sources to 120-col with comma-continuation tooling; closed 33 test gaps, mutation-verified; added lint-checked thread contracts and API modernization; migrated 38 returns to Optional; fixed 38 spec-compliance drifts; closed 8 externally-reported save/restore bugs (fail-closed replace ladders, kept-recovery journaling); implemented 51 duplication/dead-code findings (JPEG head-walk cursor, ExifPatcher helpers, −1,039 LSLOC); closed ~65 review-round and self-audit findings (in-flight temp journal, byte-aware filename validation, destroyed-host guards, SEFT-aware diagnostics, R8 keeps removed). Gates: 1,158/0 tests, audit+selftest, lint, assembleRelease, LSLOC 21,797 pinned.